[package]
name = "rt"
version = "0.1.0"
authors = ["Lauri Gustafsson <me@gustafla.space>"]
edition = "2018"

[dependencies]
crossbeam-utils = "0.8.4"
glam = "0.15.2"
num_cpus = "1.13.0"
parking_lot = "0.11.1"
png = "0.16.8"
rand = { version = "0.8.3", default-features = false }
rand_xorshift = "0.3.0"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
