[package]
name = "rt"
version = "0.1.0"
authors = ["Lauri Gustafsson <me@gustafla.space>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
crossbeam-utils = "0.8.4"
humantime = "2.1.0"
num_cpus = "1.13.0"
parking_lot = "0.11.1"
pico-args = "0.4.1"
png = "0.16.8"
rand = { version = "0.8.3", default-features = false }
rand_xorshift = "0.3.0"
ultraviolet = "0.8.1"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
